testsuite/tests/indexed-types/should_fail/T13571.hs
{-# LANGUAGE TypeFamilies #-}

module T13571 where

type family F a = r where
    F a = a
